# enae-vet-es

./: CLAUDE.md  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/agents/: backend-langchain-vet.md  product-manager.md
.cursor/commands/: enrich.md  implement.md
.cursor/rules/: python.mdc  repo-context.mdc
.cursor/skills/langchain-vet-chatbots/: SKILL.md  reference.md
.cursor/skills/product-manager-ticket-enrichment/: SKILL.md  reference.md
api/: index.py
docs/: event-storming-workflow.md  pre-operative-considerations.md
docs/jira/: VETES-14-before-after-example.md  VETES-14-enriched.md  VETES-16-enriched.md
tests/: test_app.py  test_main.py
